# amazon-review-intelligence

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CI-CD-SETUP.md  DEPLOYMENT.md  Dockerfile  OPENAI-SETUP.md  PROPERTY-SYNC-CHECKLIST.md  ReadME.md  docker-compose.prod.yml  docker-compose.yml  fix-torch-error.sh  fix_frontend.sh  fix_imports.py  render.yaml  vercel.json
.github/workflows/: ci-cd.yml  ci.yml
backend/: .env.example  .gitignore  Render.yaml  debug_apify_raw_B08N5WRWNW_IN.json  debug_apify_raw_B08N5WRWNW_US.json  debug_apify_raw_B0CHX2F5QT_IN.json  fix-nltk.py  fly.toml  main.py  minimal_app.py  pyproject.toml  requirements-current.txt  requirements.txt  requirements.txt.backup-20251022_232711
backend/app/api/endpoints/: analyze.py  export.py  insights.py  reviews.py
backend/app/core/: config.py
backend/app/models/: database.py  schemas.py
backend/app/services/: amazon_scraper.py  analyzer.py  apify_service.py  bot_detector.py  buyer_growth_track.py  clustering.py  exporter.py  free_ai_nlp.py  insights.py  insights_generator.py  mock_data.py  mock_service.py  openai_service.py  scraper.py  scraper_api_service.py
backend/app/utils/: amazon_url_parser.py  helpers.py  text_cleaner.py
frontend/: .env.example  .gitignore  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/utils/: amazon_url_parser.ts
frontend/components/: Dashboard.tsx  DetailedInsights.tsx  ErrorDisplay.tsx  GraphArea.tsx  InsightsPanel.tsx  Layout.tsx  Navbar.tsx  SidebarFilters.tsx
frontend/components/ui/: sidebar.tsx  toast.tsx  toaster.tsx  use-toast.ts
frontend/lib/: api.ts  utils.ts
frontend/types/: index.ts
scripts/: validate-properties.py
